--- a/index.html
+++ b/index.html
@@ -12,18 +12,80 @@
   <header>
 
   </header>
-  <main id="main-doc">
-    <section class="main-section" id="Introduction">
-    </section>
-    <section class="main-section" id="Overview">
-    </section>
-    <section class="main-section" id="ChapterOne">
-    </section>
-    <section class="main-section" id="ChapterTwo">
-    </section>
-    <section class="main-section" id="ChapterThree">
-    </section>
-  </main>
+<nav id="navigation">
+  <header>Js Documentation</header>
+  <ul>
+    <li>
+      <a class="nav-link" href="#introduction">Introduction</a>
+    </li>
+    <li>
+      <a class="nav-link" href="#Whatyoushouldalreadyknow">What you should already know</a>
+    </li>
+    <li>
+      <a class="nav-link" href="#JavaScript and Java">JavaScript and Java</a>
+    </li>
+    <li>
+      <a class="nav-link" href="#Hello world">Hello world</a>
+    </li>
+    <li>
+      <a class="nav-link" href="#Variables">Variables</a>
+    </li>
+    <li>
+      <a class="nav-link" href="#Declaring variables">Declaring variables</a>
+    </li>
+
+    <main id="main-doc">
+      <section class="main-section" id="Introduction">
+        <header>Introduction</header>
+        <article>
+          <p>
+            JavaScript is a cross-platform, object-oriented scripting language. 
+            It is a small and lightweight language. Inside a host environment (for example, a web browser),
+             JavaScript can be connected to the objects of its environment to provide programmatic control over them.
+          </p>
+          <p>
+            JavaScript contains a standard library of objects, such as Array, Date, and Math, and a core set of language elements 
+            such as operators, control structures, and statements. 
+            Core JavaScript can be extended for a variety of purposes by supplementing it with additional objects; for example:
+          </p>
+          <ul>
+            <li>
+              Client-side JavaScript extends the core language by supplying objects to control a browser and its Document Object Model (DOM). 
+              For example, client-side extensions allow an application to place elements on an HTML
+               form and respond to user events such as mouse clicks, form input, and page navigation.
+            </li>
+            <li>
+              Server-side JavaScript extends the core language by supplying objects relevant to running
+               JavaScript on a server. For example, server-side extensions allow an application to communicate 
+               with a database, provide continuity of information from one invocation to another of the application,
+              or perform file manipulations on a server.
+            </li>
+          </ul>
+        </article>
+      </section>
+      <section class="main-section" id="Whatyoushouldalreadyknow">
+        <header>What you should already know</header>
+      </section>
+      <section class="main-section" id="JavaScript and Java">
+        <header>JavaScript and Java</header>
+      </section>
+      <section class="main-section" id="Hello world">
+        <header>Hello world</header>
+        <code>
+          function greetMe(yourName) {
+             alert("Hello " + yourName); 
+            }
+          greetMe("World");
+        </code>
+      </section>
+      <section class="main-section" id="Variables">
+        <header>Variables</header>
+      </section>
+    </main>
+
+
+  </ul>
+</nav>
 
 
 
